# phd-progress-tracker

./: .coverage  .flake8  .gitignore  AGENTS.md  README.md  TEST_REPORT.md  coverage.xml  opencode.json  package.json  pyproject.toml
.config/opencode/: AGENTS.md
.github/ISSUE_TEMPLATE/: config.yml  feature.md
.github/workflows/: ci.yml
.opencode/agent/: coder.md  reviewer.md
.opencode/agents/: coder.md  planner.md  reviewer.md  tester.md
.opencode/commands/: code.md  commit.md  feature.md  fix.md  prd.md  review.md  snapshot.md  spec.md  test.md
data/: phd_tracker.db  tasks.json
data/json_backup/: milestones.json
docs/specs/: BRIEF.md
phd_progress_tracker/: __init__.py  main.py
phd_progress_tracker/api/: main.py  schemas.py
phd_progress_tracker/cli/: __init__.py  commands.py
phd_progress_tracker/models/: task.py
phd_progress_tracker/utils/: database.py  date_helper.py
rsl_progress_tracker/: main.py
rsl_progress_tracker/cli/: __init__.py  commands.py
rsl_progress_tracker/models/: milestone.py  task.py
rsl_progress_tracker/utils/: database.py  date_helper.py
tests/: test_api_dashboard.py  test_api_milestones.py  test_api_tasks.py  test_basic.py  test_commands.py  test_database.py  test_helpers.py  test_main.py  test_milestone.py  test_task.py
web/: README.md  package-lock.json  tailwind.config.ts  vitest.config.ts
web/.next/: app-build-manifest.json  trace
web/app/: globals.css  layout.tsx  page.tsx
web/components/: Button.tsx  Card.tsx  DashboardStats.tsx  Header.tsx  MilestoneForm.tsx  MilestoneList.tsx  Modal.tsx  TaskForm.tsx  (+2 more)
(+81 files in other folders)
