[project]
name = "phd-progress-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "William Ceccon",email = "william.seccon@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer (>=0.24.0,<0.25.0)",
    "rich (>=14.3.2,<15.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)"
]

[tool.poetry]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]

[tool.poetry.scripts]
phd = "phd_progress_tracker.main:app"
